<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.irfan.moviecatalogue.ui.activity.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:tint="#cc000000"
            android:background="#cc000000"
            tools:src="@drawable/default_placeholder"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintWidth_percent="0.415"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/default_placeholder"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster"
            tools:text="Grey\'s Anatomy" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="20/1/2021" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release"
            tools:text="1h 29m" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/CustomRatingStyle"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            tools:rating="4.5"
            android:isIndicator="true"
            android:max="5"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_poster"
            tools:layout_editor_absoluteX="16dp">

            <View
                android:layout_width="match_parent"
                android:background="@drawable/bg_cardview"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/label_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/source_sans_pro"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro"
                    android:justificationMode="inter_word"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:targetApi="o"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <include
                    android:id="@+id/no_connection"
                    layout="@layout/layout_no_connection"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:visibility="gone"
            android:id="@+id/shimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                layout="@layout/activity_detail_shimmer"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_to_add_or_remove_item_from_favourite"
        android:backgroundTint="@color/font_black"
        android:layout_gravity="bottom|end"
        app:tint="#FF0015"
        app:borderWidth="0dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border_color"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>